fixed dropdown spacing

--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -1,4 +1,3 @@
-
 .account-body {
   display: flex;
   flex-direction: column;
@@ -14,10 +13,10 @@
       color: #FFF;
     }
   }
+  .account-dropdown {
+    margin-bottom: -0.55em;
+  }
   .shift-right {
     margin-left: 2em;
   }
-}
-.account-inputs:invalid {
-  color: red;
 }
